# ai_agents_course

./: .gitignore  README.md  local.yml  pyproject.toml
compose/local/crewai/: Dockerfile  start
compose/local/ollama/: Dockerfile
requirements/: base.txt  local.txt  production.txt
src/ai_agents_course/: crew.py  main.py
src/ai_agents_course/config/: tasks.yaml
