[tool.poetry]
name = "ai_agents_course"
version = "0.1.0"
description = "ai_agents_course using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.70.1,<1.0.0" }


[tool.poetry.scripts]
ai_agents_course = "ai_agents_course.main:run"
run_crew = "ai_agents_course.main:run"
train = "ai_agents_course.main:train"
replay = "ai_agents_course.main:replay"
test = "ai_agents_course.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
